tests/fixtures/invalid/missing_colon_rule.sr
rule "EQ: Missing Colon" in underlying
    when true:
        then emit_signal(kind="BUY")

